src/objects/LPAD_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Launchpad custom settings</description>
    <fields>
        <fullName>Assessment_Result_Chatter_Group__c</fullName>
        <description>The chatter group Id for the Lillyfit Assessment Chatter Group</description>
        <inlineHelpText>The chatter group Id for the Lillyfit Assessment Chatter Group</inlineHelpText>
        <label>Assessment Result Chatter Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group__c</fullName>
        <description>The chatter group Id for the chatter group to show on the launchpad landing page</description>
        <inlineHelpText>The chatter group Id for the chatter group to show on the launchpad landing page</inlineHelpText>
        <label>Chatter Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Email__c</fullName>
        <description>The mail-to email address for the Launchpad footer</description>
        <inlineHelpText>The mail-to email address for the Launchpad footer</inlineHelpText>
        <label>Footer Email</label>
        <type>Email</type>
    </fields>
    <label>LPAD Settings</label>
</CustomObject>